1. Added in the jquery ui dependency because the datepicker module now requires it. 2. Changed the theme to allow for a preprocessor file in the future. 3. Changed the block to default to not showing on the admin or node edit pages. 4. Fixed a float clearing bug in the fieldset. 5. Added a field reset button for calendar date range rows. 6. Restricted the date range fields to exclude dates that have already been chosen 7. Renamed the css file for better drupal standardization. 8. Changed the drupal functions to work in the drupal namespacing better. 9. Renamed the template files so they are easier to work with.

--- a/css/availability-calendar-styles.css
+++ b/css/availability-calendar-styles.css
@@ -19,16 +19,29 @@ form#node-form input.availability-calendar-status-field {
   max-width:200px !important;
 }
 
+form#node-form div.availability-calendar-preview {
+  display:block;
+  width:100%;
+  clear:both;
+}
+
+form#node-form input.availability-calendar-reset-field {
+  margin-top:2%;
+  float:right;
+  clear:right;
+}
+
 /**
  * Calendar CSS
  */
+
 div.availability-calendar-month {
   margin:5px;
-  padding:10px 0 0 10px;
-  width:45%;
+  padding:10px 10px 0 10px;
+  width:46%;
   float:left;
   font-size:.7em;
-  height:200px;
+  min-height:225px;
   border: 1px solid #CCC;
 }
 
